<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/background"
    tools:context=".activities.user.UserAddReportActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:layout_marginTop="40dp"
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:mapbox_cameraTargetLat="40.73581"
        app:mapbox_cameraTargetLng="-73.99155"
        app:mapbox_cameraZoom="19"/>

    <EditText
        android:layout_gravity="center"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="#333"
        android:textSize="18sp"
        android:id="@+id/address"
        android:inputType="text"
        android:hint="@string/address"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:layout_gravity="center"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="#333"
        android:textSize="18sp"
        android:id="@+id/notes"
        android:inputType="text"
        android:hint="@string/notes"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlSymmetry" />


    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@mipmap/bar"
            android:hint="@string/add_photo"
            android:paddingStart="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:paddingBottom="16dp"
            android:minHeight="55dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <ImageButton
            android:layout_centerVertical="true"
            android:id="@+id/select_image"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="16dp"
            android:minHeight="60dp"
            android:padding="10dp"
            android:src="@drawable/ic_image"
            android:background="@drawable/actionbar_gradient"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </RelativeLayout>


    <ImageView
        android:layout_gravity="center"
        android:id="@+id/send"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</LinearLayout>